<resources>
    <!--activity_login-->
    <string name="app_name">Mój Zwierzak</string>
    <string name="editTextEmail">E-MAIL</string>
    <string name="editTextPassword">HASŁO</string>
    <string name="checkBoxRememberMe">ZAPAMIĘTAJ MNIE</string>
    <string name="buttonLogin">ZALOGUJ SIĘ</string>
    <string name="textViewAlreadyReg">JESTEŚ JESZCZE NIEZAREJESTROWANY?</string>
    <string name="buttonGoRegister">ZAŁÓŻ KONTO</string>
    <!--activity_forgot-->
    <string name="textViewForgot">ZAPOMNIAŁEM HASŁA</string>
    <!--activity_register-->
    <string name="textViewRegister">REJESTRACJA</string>
    <string name="editTextUsername">NAZWA UŻYTKOWNIKA</string>
    <string name="editTextRepPassword">POWTÓRZ HASŁO</string>
    <string name="buttonRegister">ZAREJESTRUJ</string>
    <string name="textViewReset">ZRESETUJ SWOJE HASŁO</string>
    <string name="buttonReset">ZRESETUJ</string>
    <!--activity_Dashboard-->
    <string name="textViewLogo">MÓJ\nZWIERZAK</string>
    <string name="buttonMyProfile">MÓJ PROFIL</string>
    <string name="buttonKnowledge">WIEDZA</string>
    <string name="buttonVet">WETERYNARZ</string>
    <string name="buttonLogout">WYLOGUJ SIĘ</string>
    <!--activity_AddAnimal-->
    <string name="TextViewAddAnimal">DODAJ ZWIERZAKA</string>
    <string name="ButtonCancel">ANULUJ</string>
    <!--activity_AddMammals,Amphibians,Birds,Invertebrates,Reptiles-->
    <string name="editTextName">IMIĘ ZWIERZAKA</string>
    <string name="editTextWage">PODAJ WAGĘ ZWIERZAKA</string>
    <string name="editTextDate">WYBIERZ DATĘ ADOPCJI</string>
    <string name="editTextBio">NOTATKI</string>
    <string name="ButtonAdd">ZAPISZ</string>
    <!--activity_AddAnimal-->
    <string name="TextViewKnowledge">ENCYKLOPEDIA</string>
    <!--preferences-->
    <string name="autoLoginPreferenceName">autoLogin</string>
</resources>