<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/addanimal_header">

            <TextView
                android:id="@+id/TextViewAddAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maiandra"
                android:layout_marginBottom="12dp"
                android:text="@string/TextViewAddAnimal"
                android:textColor="#EAFBC7"
                android:textSize="28sp"
                tools:ignore="RtlHardcoded"
                />

        </RelativeLayout>
        <EditText
            android:id="@+id/editTextInverteName"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/maiandra"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editTextName"
            android:inputType="text"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#506C56"
            android:textColorHint="#88A882"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerChooseInverte"
            android:background="@drawable/spinner_bg"
            android:layout_marginTop="30dp"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:autofillHints=""
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/editTextInverteWage"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/maiandra"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editTextWage"
            android:inputType="text"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#506C56"
            android:textColorHint="#88A882"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextInverteDate"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/maiandra"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editTextDate"
            android:inputType="date"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#506C56"
            android:textColorHint="#88A882"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextInverteBio"
            android:layout_height="wrap_content"
            android:layout_width="326dp"
            android:layout_marginTop="30dp"
            android:inputType="textMultiLine"
            android:background="@drawable/edittext_bg"
            android:maxLength="80"
            android:hint="@string/editTextBio"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:lines="3"
            android:minLines="3"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:autofillHints=""
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:fontFamily="@font/maiandra"
            android:textColor="#506C56"
            android:textColorHint="#88A882"
            android:textSize="20sp"/>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:padding="25dp">

            <Button
                android:id="@+id/ButtonInverteAdd"
                android:layout_width="20dp"
                android:layout_height="57dp"
                android:background="@drawable/bg_login_button"
                android:fontFamily="@font/maiandra"
                android:layout_marginEnd="25dp"
                android:text="@string/ButtonAdd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#E3FFDD"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/ButtonInverteCancel"
                android:layout_width="20dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:background="@drawable/bg_login_button"
                android:fontFamily="@font/maiandra"
                android:text="@string/ButtonCancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#E3FFDD"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
