<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/maiandra"
                android:gravity="center"
                android:text="@string/textViewReset"
                android:textColor="#4E5E4A"
                android:textSize="39sp" />


        </RelativeLayout>



        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="326dp"
            android:layout_height="53dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/maiandra"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#506C56"
            android:textColorHint="#88A882"
            android:textSize="20sp" />




        <Button
            android:id="@+id/buttonReset"
            android:layout_width="240dp"
            android:layout_height="57dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/bg_login_button"
            android:fontFamily="@font/leelawui"
            android:text="@string/buttonReset"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E3FFDD"
            android:textSize="24sp" />




    </LinearLayout>


</ScrollView>