<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dashboard"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp">


            <TextView
                android:id="@+id/textViewLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textViewLogo"
                android:fontFamily="sans-serif-light"
                android:textColor="#506C56"
                android:textSize="55sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/buttonMyProfile"
            android:layout_width="match_parent"
            android:layout_height="90dp"

            android:background="@drawable/bg_dashboard_button"
            android:fontFamily="@font/maiandra"
            android:gravity="center"
            android:paddingEnd="60dp"
            android:text="@string/buttonMyProfile"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E3FFDD"
            android:textSize="32sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/buttonKnowledge"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bg_dashboard_button"
            android:fontFamily="@font/maiandra"
            android:gravity="center"
            android:paddingEnd="130dp"
            android:text="@string/buttonKnowledge"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E3FFDD"
            android:textSize="32sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bg_dashboard_button"
            android:fontFamily="@font/maiandra"
            android:gravity="center"
            android:paddingEnd="60dp"
            android:text="@string/buttonSettings"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#E3FFDD"
            android:textSize="32sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="220dp"
            android:background="@android:color/white"/>






    </LinearLayout>


</ScrollView>